# pyxpcm

./: .gitignore  .travis.yml  HOW_TO_RELEASE  MANIFEST.in  README.md  a.py  meta.yaml  pca_nc_maker.py  pyproject.toml  readthedocs.yml  requirements-readthedocs.txt  requirements.txt  setup.py  test-loading.ipynb  train_on_year.ipynb  travis.yml
.github/workflows/: pypi.yml  tests.yml
ci/requirements/: py3.8-all-pinned-daskml.yml  py3.8-all-pinned-scikitlearn.yml  py3.8-all-pinned.yml  py3.8-core-pinned.yml
docs/: Makefile  api-hidden.rst  api-io.rst  api.rst  basic.ipynb  basic.rst  basic_gridded.ipynb  basic_new.ipynb  bibliography.rst  conf.py  debug_perf.ipynb  environment.yml  example.ipynb  examples.rst  gridded_product.rst  index.rst  install.rst  io.ipynb  make.bat  methodology.rst  model_catalogue.rst  overview.rst  pcm_prop.ipynb  plotting.rst  preprocessing.ipynb  requirements.txt  statistics.rst  summary.rst  testnb.ipynb  whats-new.rst
docs/.ipynb_checkpoints/: examples-checkpoint.rst
docs/_build/: .buildinfo  api.html  examples.html  genindex.html  index.html  install.html  matlab.html  methodology.html  objects.inv  plotting.html  search.html  searchindex.js  started.html  stats.html  whats-new.html
docs/_src/: Preprocessing_pipeline_1line.key  Preprocessing_pipeline_2lines.key  Untitled.ipynb  basic_gridded.ipynb  example.ipynb  (+6 more)
pyxpcm/: __init__.py  datasets.py  dummy_datasets.py  io.py  models.py  pcm.py  pcmodel.py  pcmv5.py  plot.py  stat.py  stats.py  tutorial.py  utils.py  xarray.py
pyxpcm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+95 files in other folders)
